@@ -24,7 +24,7 @@ lazy val commonSettings = Seq(
 )
 
 lazy val buildSettings = Seq(
-  scalaVersion := "2.12.18",
+  scalaVersion := "2.13.16",
   javacOptions ++= Seq(
     "-source",
     "21",
@@ -34,10 +34,6 @@ lazy val buildSettings = Seq(
   scalacOptions ++= Seq(
     "-feature",
     "-unchecked",
-    // When compiling in encrypted drives in Linux, the max size of a name is reduced to around 140
-    // https://unix.stackexchange.com/a/32834
-    "-Xmax-classfile-name",
-    "140",
     "-deprecation",
     "-Xlint:-stars-align,_",
     "-Ywarn-dead-code",
@@ -45,6 +41,18 @@ lazy val buildSettings = Seq(
     "-Ypatmat-exhaust-depth",
     "160"
   )
+)
+
+lazy val chronicleFlags = Seq(
+  "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+  "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+  "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED"
 )
 
 lazy val compileSettings = Seq(
@@ -56,7 +64,10 @@ lazy val compileSettings = Seq(
     "Automatic-Module-Name" -> name.value.replace('-', '.')
   ),
   // Ensure Java annotations get compiled first, so that they are accessible from Scala.
-  compileOrder := CompileOrder.JavaThenScala
+  compileOrder := CompileOrder.JavaThenScala,
+  // Ensure we fork new JVM for run, so we can set JVM flags.
+  Compile / run / fork := true,
+  Compile / run / javaOptions ++= chronicleFlags
 )
 
 lazy val testSettings = Seq(
@@ -80,6 +91,7 @@ lazy val testSettings = Seq(
     "-XX:+HeapDumpOnOutOfMemoryError",
     s"-XX:HeapDumpPath=${Paths.get(sys.env.getOrElse("SBT_FORK_OUTPUT_DIR", "target/test-results")).resolve("heap-dumps")}"
   ),
+  Test / javaOptions ++= chronicleFlags,
   Test / publishArtifact := true
 )
 
@@ -105,18 +117,20 @@ lazy val root = (project in file("."))
     strictBuildSettings,
     publishSettings,
     libraryDependencies ++= Seq(
-      "com.raw-labs" %% "das-sdk-scala" % "0.1.4" % "compile->compile;test->test",
+      "com.raw-labs" %% "protocol-das" % "1.0.0-beta" % "compile->compile;test->test",
+      "com.raw-labs" %% "das-server-scala" % "1.0.0-beta3" % "compile->compile;test->test",
       "com.databricks" % "databricks-sdk-java" % "0.31.1" % "compile->compile"
     )
   )
 
+val arch = sys.env.getOrElse("ARCH", "amd64")
 val amzn_jdk_version = "21.0.4.7-1"
-val amzn_corretto_bin = s"java-21-amazon-corretto-jdk_${amzn_jdk_version}_amd64.deb"
+val amzn_corretto_bin = s"java-21-amazon-corretto-jdk_${amzn_jdk_version}_$arch.deb"
 val amzn_corretto_bin_dl_url = s"https://corretto.aws/downloads/resources/${amzn_jdk_version.replace('-', '.')}"
 
 lazy val dockerSettings = strictBuildSettings ++ Seq(
   name := "das-databricks-server",
-  dockerBaseImage := s"--platform=amd64 debian:bookworm-slim",
+  dockerBaseImage := s"--platform=$arch debian:bookworm-slim",
   dockerLabels ++= Map(
     "vendor" -> "RAW Labs SA",
     "product" -> "das-databricks-server",
@@ -183,7 +197,7 @@ lazy val dockerSettings = strictBuildSettings ++ Seq(
     }
     case lm @ _ => lm
   },
-  Compile / mainClass := Some("com.rawlabs.das.server.DASServerMain"),
+  Compile / mainClass := Some("com.rawlabs.das.server.DASServer"),
   Docker / dockerAutoremoveMultiStageIntermediateImages := false,
   dockerAlias := dockerAlias.value.withTag(Option(version.value.replace("+", "-"))),
   dockerAliases := {
@@ -198,7 +212,8 @@ lazy val dockerSettings = strictBuildSettings ++ Seq(
         )
       case None => Seq(baseAlias)
     }
-  }
+  },
+  Universal / javaOptions ++= chronicleFlags.map("-J" + _)
 )
 
 lazy val docker = (project in file("docker"))
@@ -209,5 +224,5 @@ lazy val docker = (project in file("docker"))
   .settings(
     strictBuildSettings,
     dockerSettings,
-    libraryDependencies ++= Seq("com.raw-labs" %% "das-server-scala" % "0.2.0" % "compile->compile;test->test")
+    libraryDependencies ++= Seq("com.raw-labs" %% "das-server-scala" % "1.0.0-beta3" % "compile->compile;test->test")
   )
